2008-06-21  Carsten Niehaus  <cniehaus@kde.org>

	* src/obutil.cpp: Typo fixes.

	* src/forcefields/[forcefielduff.cpp,forcefieldmmff94.cpp]: Typo fixes

	* src/formats/[mpdformat.cpp,xtcformat.cpp]: Typo fixes
	
	* src/forcefields/*.h: Make ctor explicit.
	
2008-06-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obutil.cpp (CartesianToInternal): Fix PR#1923896 for
	Fenske-Hall z-matrix format. When looking for non-linear
	atoms, don't pick non-bonded >10.0 Angstroms, which cause
	problems with FH (and other) fixed format z-matrices.

	* src/mol.cpp (ConnectTheDots): Fix for PR#1813502 for
	existing bonds getting deleted by ConnectTheDots. Make sure to
	preserve all original connections from PDB.

	* src/formats/pdbformat.cpp (ReadMolecule): Fix for PR#1985681
	with virtual bonds still built into a PDB file.

2008-06-20  Chris Morley

	* include/openbabel/locale.h, src/locale.cpp: extra #includes
	
	* windows-vc2005/babelconfig.h: define strdup. Version to 2.2.0
	
	* include/openbabel/obiter.h: trivial change to avoid compiler warning
	
	* src/fingerprints/finger3.cpp: do singel SMARTS match, as suggested by
	Ernst-Georg Schmid

	* windows-vc2005/OBError/OBError.vcproj: add locale.cpp

2008-06-20  Noel O'Boyle  <baoilleach@gmail.com>

	* Revert of r2347: I had set eol:native instead of eol-style native.

2008-06-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/fingerprint.cpp: Contribution from Andrew Dalke for
	improved speed using GCC.

2008-06-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/locale.h, src/locale.cpp: New OBLocale class
	to centralize calls to setlocale/uselocale. Should solve strange
	segfault on Linux with freelocale.

	* include/openbabel/obiter.h, src/obiter.cpp: Add depth tracking
	for DFS and BFS iterators. Addresses PR#1901348.

2008-06-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/*.cpp: Checked all files for their use of tokenize().
	All added lines are like:
	